[project]
name = "odoo-addons-oca-l10n-france"
version = "17.0.20240212.0"
dependencies = [
    "odoo-addon-l10n_fr_cog>=17.0dev,<17.1dev",
    "odoo-addon-l10n_fr_department>=17.0dev,<17.1dev",
    "odoo-addon-l10n_fr_department_oversea>=17.0dev,<17.1dev",
    "odoo-addon-l10n_fr_hr_check_ssnid>=17.0dev,<17.1dev",
    "odoo-addon-l10n_fr_siret>=17.0dev,<17.1dev",
    "odoo-addon-l10n_fr_state>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
